# portkill

./: .gitignore  Cargo.toml  README.md  claude.md
src/: main.rs  models.rs
src/killer/: mod.rs
src/scanner/: mod.rs  models.rs  process_info.rs
