[package]
name = "portkill"
version = "0.1.0"
edition = "2021"
description = "Lightweight port manager for Ubuntu Linux"
authors = ["PortKill Team"]

[dependencies]
eframe = "0.31"
nix = { version = "0.29", features = ["signal"] }
users = "0.11"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.ratatui]
version = "0.29"
optional = true

[features]
default = []
tui = ["ratatui"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
